* type=addressgroup-merger | bugfix to check childancestor objects availability
* type=addressgroup-merger | bugfix if multiple childDG has same objectgroup incl. value, but one differ; stop merging
* class AddressGroup  | bugfix for method expand() - to correctly extract all submembers and their value for type=rule 'actions=exporttoexcel:file.html,resolveaddresssummary'

GENERAL:


2.1.12 (20230731)
UTIL:
* type=bpa-generator | extend response output if not valid JSON
* type=gcp | extend for mysql usage and bring in mysql pw in type=key-manager

BUGFIX:
* type=XYZ | in=api://{MGMT-IP} actions=name-rename - bugfix for API usage

GENERAL:


2.1.11 (20230721)
UTIL:
* type=rule | introduce new 'filter=(timestamp-rule-creation <>=! -30 days)' | timestamp-rule-modification
* type=address | introduce 'filter=(value ip4.included-in RFC1918)'
* type=device | introduce actions=xml-extract
type=bpa-generator | extend output if task_id was not correctly available in response

BUGFIX:
* type=rule actions=exporttoexcel | bugfix for field 'ID' to not add additional data column
* type=rule actions=exporttoexcel:file.html,resolveAddresssummary | bugfix to display IP value summary for ip-wildmask objects
* class Addresscommon | bugfix for type=address-merger

GENERAL:
* general - update dynamic content to version: 8729-8157
* * class EthernetInterface - adding/removing address object instead of IP address - extend with stopping e.g. for type=address actions=name-rename if object is used on ethernet interface


2.1.10 (20230714)
UTIL:
* type=address | introduce actions=move-wildcard2network

BUGFIX:
* type=custom-url-category-merger | bugfix to merge correctly objects in DG hierarchy - add reason for exportcsv=file.html
* type=custom-url-category-merger | introduce argument allowaddingmissingobjects
* type=playbook | adjustment to fit to PHP version 8.1.x

GENERAL:


2.1.9 (20230712)
UTIL:
* type=key-manager - extend support for new connection method "in=sase-api://"