@@ -19,6 +19,7 @@ BUGFIX:
 * type=addressgroup-merger | bugfix to check childancestor objects availability
 * type=addressgroup-merger | bugfix if multiple childDG has same objectgroup incl. value, but one differ; stop merging
 * class AddressGroup  | bugfix for method expand() - to correctly extract all submembers and their value for type=rule 'actions=exporttoexcel:file.html,resolveaddresssummary'
+* type=address actions=exporttoexcel:file.html | bugfix to crash for tmp objects
 
 GENERAL:
 
